# Chem277-Team4-Project

./: .gitignore  AD_updates_EDA_and_Data_Curation.ipynb  GAT_predict_ALS.ipynb  GAT_updates.ipynb  Makefile  PPI.py  README.md  alises_match.py  checkpt.py  eda.ipynb  gnn.ipynb  graph.ipynb  namelink.csv  processed_graph.pt  protein_features.csv  pyproject.toml  requirements.txt  result_record.md  train.ipynb  uniprot_unmatched.csv
ANN/: ANN.py  best_ANN.pt
GAT_updates/: AD_updates_EDA_and_Data_Curation.ipynb  AD_updates_train.py  DEC01_model.py  DEC01_train.py  EDA_GNPC_Graph_creation_with_PPI_updated.ipynb  best_model.pt  processed_graph.pt
GCN_all4/: EDA_GNPC_Graph_creation_with_PPI_updated.ipynb  GCN_all4.ipynb  best_model.pt  processed_graph.pt
MLproject/: project.ipynb
data/: README.md  feature_engineering.ipynb  load.py  ppi_nodes_raw.csv  uniprot_util.py
data/raw/: ad_data.csv  (+4 more)
entrypoint/: analyze.py  analyze2.py  analyze_betas_baseline.py  anomaly_detection.py  ontology_analysis.py  train.py
models/: GNN.py  best_model.pt
notebooks/: Cluster_gene_annotations.ipynb  EDA_Graph_Analysis + Cluster 0_this is was before adding the silhoutte scoring for clustering quality.ipynb  EDA_and_Data_Curation.ipynb  GNPC_data_exploration.ipynb  Untitled.ipynb  decision_tree.ipynb  model_results_plots_metrics.ipynb  train_notes.ipynb
notes/: train_notes.ipynb
plots/: read.md
results/: anomaly_scores.csv
src/: Chem277-Team4-Project.code-workspace  analyze.py  clean_data.py  model.py  restructure_to_patient_graphs.py  threshold_tuning_results.pt  train.py
(+168 files in other folders)
